[gd_scene load_steps=10 format=3 uid="uid://ddr2g4hp76oyy"]

[ext_resource type="Script" uid="uid://dyc3o5kkjqcjy" path="res://src/conclude.gd" id="1_30lk5"]
[ext_resource type="FontFile" uid="uid://cmbwnmrpuigxx" path="res://assets/fonts/FangZhengShuSongJianTi-1.ttf" id="1_we61h"]

[sub_resource type="Gradient" id="Gradient_j3y3i"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_enhkt"]
gradient = SubResource("Gradient_j3y3i")

[sub_resource type="LabelSettings" id="LabelSettings_30lk5"]
font_size = 32

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_30lk5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_av4b4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fm334"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ryvsa"]

[node name="conclude" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_30lk5")
metadata/obtain = 10
metadata/wins = 1

[node name="texture_rect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_enhkt")
expand_mode = 1
stretch_mode = 1

[node name="label_title" type="Label" parent="texture_rect"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.13100001
anchor_right = 1.0
anchor_bottom = 0.23200001
offset_top = 0.11199951
offset_right = -479.02472
offset_bottom = -27.33599
grow_horizontal = 2
scale = Vector2(1.7118014, 1.7118014)
theme_override_fonts/font = ExtResource("1_we61h")
theme_override_font_sizes/font_size = 91
text = "结局"
label_settings = SubResource("LabelSettings_30lk5")
horizontal_alignment = 1

[node name="label_title_obtain" type="Label" parent="texture_rect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.23400001
anchor_top = 0.384
anchor_right = 0.40500003
anchor_bottom = 0.44000003
offset_left = 0.43197632
offset_top = 0.16799927
offset_right = -0.5600281
offset_bottom = -0.120025635
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_we61h")
text = "获得棋子："
label_settings = SubResource("LabelSettings_30lk5")

[node name="label_value_obtain" type="Label" parent="texture_rect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.53800005
anchor_top = 0.384
anchor_right = 0.708
anchor_bottom = 0.44000003
offset_left = 0.22393799
offset_top = 0.16799927
offset_right = 0.38397217
offset_bottom = -0.120025635
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_we61h")
text = "0"
label_settings = SubResource("LabelSettings_30lk5")
horizontal_alignment = 2

[node name="label_title_wins" type="Label" parent="texture_rect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.23400001
anchor_top = 0.384
anchor_right = 0.40500003
anchor_bottom = 0.44000003
offset_left = 0.43197632
offset_top = 55.168
offset_right = -0.5600281
offset_bottom = 54.879974
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_we61h")
text = "赢下对局："
label_settings = SubResource("LabelSettings_30lk5")

[node name="label_value_wins" type="Label" parent="texture_rect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.53800005
anchor_top = 0.384
anchor_right = 0.708
anchor_bottom = 0.44000003
offset_left = 0.22393799
offset_top = 55.168
offset_right = 0.38397217
offset_bottom = 54.879974
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_we61h")
text = "0"
label_settings = SubResource("LabelSettings_30lk5")
horizontal_alignment = 2

[node name="button" type="Button" parent="texture_rect"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.71800005
anchor_right = 1.0
anchor_bottom = 0.813
offset_top = -0.2640381
offset_bottom = 0.17596436
grow_horizontal = 2
grow_vertical = 0
mouse_force_pass_scroll_events = false
theme_override_fonts/font = ExtResource("1_we61h")
theme_override_font_sizes/font_size = 41
theme_override_styles/normal = SubResource("StyleBoxEmpty_30lk5")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_av4b4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_fm334")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ryvsa")
action_mode = 0
text = "重新开始"
flat = true
